deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-app
  labels:
    app: ghost-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost-app
  template:
    metadata:
      labels:
        app: ghost-app
    spec:
      containers:
      - image: registry.thaibevapp.com/ptpagile/ptpcrossbuy/test:myapp
        name: ghost-first-app
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "400Mi"
            cpu: "200m"
