service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-app
spec:
  selector:
    app: ghost-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
